node01/05-minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  type: NodePort
  ports:
  - name: service 
    port: 9000
    targetPort: 9000
    nodePort: 30333
  selector:
    app: minio
    #app.kubernetes.io/name: minio-deploy
    #app.kubernetes.io/part-of: minio-ingress
