node01/bak-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: minio.k8s
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: minio-service
          servicePort: 9000
